# RustMap

./: LICENSE  README.md  README_example.md  cflow_generation.py  extract.py
case_study/: control_flow_translation.md  rewriting_global_variables.md  rewriting_pointer_aliasing.md
cognitive_study/: cognitive_complexity_bzip2-c2rust.csv  cognitive_complexity_bzip2_rs_gpt.csv  cognitive_complexity_rosetta_code_gpt.csv  cognitive_complexity_rossta-c2rust.csv  extract_cc.py  plot.py  run_all.sh
prompt-templates/: compile_error.txt  improve-C2Rust.txt  macro-translation-error.txt  (+2 more)
rust-code/bzip2-gpt/: Cargo.toml  lib.rs
rust-code/bzip2-gpt/blocksort/: BZ2_blockSort.rs  fallbackQSort3.rs  fallbackSimpleSort.rs  fallbackSort.rs  mainGtU.rs  mainQSort3.rs  mainSimpleSort.rs  mainSort.rs
rust-code/bzip2-gpt/bzip2/: compressStream.rs  globals.rs  license.rs  main.rs  myfeof.rs  redundant.rs  testStream.rs  uInt64_toAscii.rs  uncompress.rs  uncompressStream.rs  usage.rs  utils.rs
rust-code/bzip2-gpt/bzlib/: BZ2_bzBuffToBuffCompress.rs  BZ2_bzBuffToBuffDecompress.rs  BZ2_bzCompress.rs  BZ2_bzCompressInit.rs  BZ2_bzDecompressEnd.rs  BZ2_bzDecompressInit.rs  BZ2_bzReadClose.rs  BZ2_bzReadOpen.rs  BZ2_bzWriteClose.rs  BZ2_bzclose.rs  BZ2_bzflush.rs  bz2_bzopen.rs  bz2_bzread.rs  flush_RL.rs  utils.rs
rust-code/bzip2-gpt/compress/: BZ2_compressBlock.rs  bsW.rs  sendMTFValues.rs
rust-code/bzip2-gpt/crctable/: BZ2_crc32Table.rs
rust-code/bzip2-gpt/decompress/: BZ2_decompress.rs
rust-code/bzip2-gpt/huffman/: BZ2_hbAssignCodes.rs  BZ2_hbCreateDecodeTables.rs
(+2230 files in other folders)
