[package]
name = "bzip2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2"

[[bin]]
name = "bzip2"
path = "./bzip2/main.rs"  # Specify the relative path to your main.rs

[workspace]
rustflags = ["-A", "unused_imports"]

[lib]
path = "lib.rs"

